[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Font/Gontserrat-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Font/Gontserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Animations/settings_hover_in.tres" type="Animation" id=4]
[ext_resource path="res://Assets/Animations/play_hover_out.tres" type="Animation" id=5]
[ext_resource path="res://Assets/Animations/credits_hover_out.tres" type="Animation" id=6]
[ext_resource path="res://Assets/Animations/play_hover_in.tres" type="Animation" id=7]
[ext_resource path="res://Assets/Animations/settings_hover_out.tres" type="Animation" id=8]
[ext_resource path="res://Assets/Animations/credits_hover_in.tres" type="Animation" id=9]
[ext_resource path="res://Assets/Animations/quit_hover_out.tres" type="Animation" id=10]
[ext_resource path="res://Assets/Animations/quit_hover_in.tres" type="Animation" id=11]

[sub_resource type="DynamicFont" id=1]
size = 96
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 72
use_filter = true
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -428.0
margin_top = 20.0
margin_right = 428.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "INFILTRATION-TD"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -256.0
margin_right = 512.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="MainContainer"]
margin_left = 372.0
margin_top = 68.0
margin_right = 652.0
margin_bottom = 443.0
custom_constants/separation = 5
alignment = 1

[node name="PlayButton" type="Button" parent="MainContainer/MenuContainer"]
margin_right = 280.0
margin_bottom = 90.0
rect_min_size = Vector2( 280, 90 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="PlayLabel" type="Label" parent="MainContainer/MenuContainer/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -45.0
margin_right = 140.5
margin_bottom = 45.0
rect_min_size = Vector2( 280, 90 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="MainContainer/MenuContainer"]
margin_top = 95.0
margin_right = 280.0
margin_bottom = 185.0
rect_min_size = Vector2( 280, 90 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="SettingsLabel" type="Label" parent="MainContainer/MenuContainer/SettingsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -45.0
margin_right = 145.0
margin_bottom = 45.0
rect_min_size = Vector2( 280, 90 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="MainContainer/MenuContainer"]
margin_top = 190.0
margin_right = 280.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 90 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="CreditsLabel" type="Label" parent="MainContainer/MenuContainer/CreditsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -45.0
margin_right = 145.0
margin_bottom = 45.0
rect_min_size = Vector2( 280, 90 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "Credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MainContainer/MenuContainer"]
margin_top = 285.0
margin_right = 280.0
margin_bottom = 375.0
rect_min_size = Vector2( 280, 90 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="QuitLabel" type="Label" parent="MainContainer/MenuContainer/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -45.0
margin_right = 140.5
margin_bottom = 45.0
rect_min_size = Vector2( 280, 90 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayHoverAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/play_hover_in = ExtResource( 7 )
anims/play_hover_out = ExtResource( 5 )

[node name="SettingsHoverAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/settings_hover_in = ExtResource( 4 )
anims/settings_hover_out = ExtResource( 8 )

[node name="CreditsHoverAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/credits_hover_in = ExtResource( 9 )
anims/credits_hover_out = ExtResource( 6 )

[node name="QuitHoverAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/quit_hover_in = ExtResource( 11 )
anims/quit_hover_out = ExtResource( 10 )
[connection signal="mouse_entered" from="MainContainer/MenuContainer/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/MenuContainer/PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="MainContainer/MenuContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="MainContainer/MenuContainer/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/MenuContainer/SettingsButton" to="." method="_on_SettingsButton_mouse_exited"]
[connection signal="pressed" from="MainContainer/MenuContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="mouse_entered" from="MainContainer/MenuContainer/CreditsButton" to="." method="_on_CreditsButton_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/MenuContainer/CreditsButton" to="." method="_on_CreditsButton_mouse_exited"]
[connection signal="pressed" from="MainContainer/MenuContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="mouse_entered" from="MainContainer/MenuContainer/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/MenuContainer/QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="MainContainer/MenuContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
